--- a/index.html
+++ b/index.html
@@ -28,18 +28,22 @@
     </header>
 
     <main>
-        <section class="hero-page background-image-1">
-            <div class="container">
+        <section class="hero-page ">
+            <div class="container background-image-1">
                 <div class="hero-page-wrapper ">
-                    <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
-                    <div class="page-title dark1">
-                        <h1 class="page-title-style-h1">An NFT like no other</h1>
+                    <div class="hero-content">
+                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
+                        <div class="page-title dark1">
+                            <h1 class="page-title-style-h1">An NFT like no other</h1>
+                        </div>
+                        <div class="page-text dark2">
+                            <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
+                                receive updates when we go
+                                live.</p>
+                        </div>
+                        <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
                     </div>
-                    <div class="page-text dark2">
-                        <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
-                            live.</p>
-                    </div>
-                    <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
+                    <div class="hero-image"></div>
                 </div>
             </div>
         </section>
@@ -47,8 +51,11 @@
         <section class="call-to-action-page ">
             <div class="container background-color-fill">
                 <div class="CTA-wrapper">
-                    <div class="section-title dark1"><span class="section-title-style">Free NFT for early birds</span></div>
-                    <div class="section-text dark1"><p class="section-text-style">Sign up today and you’ll get a free NFT when we launch</p></div>
+                    <div class="section-title dark1"><span class="section-title-style">Free NFT for early birds</span>
+                    </div>
+                    <div class="section-text dark1">
+                        <p class="section-text-style">Sign up today and you’ll get a free NFT when we launch</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -58,23 +65,29 @@
                 <div class="partner-list-wrapper">
                     <ul>
                         <li class="partner">
-                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-boomerang.svg" alt=""></div>
-                            <div class="partner-name dark4"><span class="partner-name-style">Boom<span class="hide-mobile-part">erang</span></span></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style"
+                                    src="./images/main-partner-list-icons/vector-boomerang.svg" alt=""></div>
+                            <div class="partner-name dark4"><span class="partner-name-style">Boom<span
+                                        class="hide-mobile-part">erang</span></span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-blimp.svg" alt="" ></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style"
+                                    src="./images/main-partner-list-icons/vector-blimp.svg" alt=""></div>
                             <div class="partner-name dark4"><span class="partner-name-style">Blimp</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-qrco.svg" alt="" ></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style"
+                                    src="./images/main-partner-list-icons/vector-qrco.svg" alt=""></div>
                             <div class="partner-name dark4"><span class="partner-name-style">qrco</span></div>
                         </li>
                         <li class="partner hide-mobile-part">
-                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-opendoor.svg" alt=""></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style"
+                                    src="./images/main-partner-list-icons/vector-opendoor.svg" alt=""></div>
                             <div class="partner-name dark4"><span class="partner-name-style">OpenDoor</span></div>
                         </li>
                         <li class="partner">
-                            <div class="partner-logo dark4"><img class="partner-logo-style" src="./images/main-partner-list-icons/vector-droplet.svg" alt=""></div>
+                            <div class="partner-logo dark4"><img class="partner-logo-style"
+                                    src="./images/main-partner-list-icons/vector-droplet.svg" alt=""></div>
                             <div class="partner-name dark4"><span class="partner-name-style">Droplet</span></div>
                         </li>
                     </ul>
@@ -87,8 +100,12 @@
                 <div class="product-list-wrapper">
 
                     <div class="section-title-wrapper">
-                        <div class="section-title dark1"><span class="section-title-style">LE Super Rare Auction</span></div>
-                        <div class="section-text dark2"><p class="section-text-style">We have released four limited edition NFTs early which can be bid on via <span class="via-link">OpenSea.</span></p></div>
+                        <div class="section-title dark1"><span class="section-title-style">LE Super Rare Auction</span>
+                        </div>
+                        <div class="section-text dark2">
+                            <p class="section-text-style">We have released four limited edition NFTs early which can be
+                                bid on via <span class="via-link">OpenSea.</span></p>
+                        </div>
                     </div>
 
                     <div class="product-card-list">
@@ -101,14 +118,20 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Purple Man</span></div>
-                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span
+                                            class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span
+                                            class="product-name-style ">Purple Man</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span
+                                            class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
-                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
-                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span
+                                            class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span
+                                            class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span
+                                            class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -121,14 +144,20 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Beige</span></div>
-                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span
+                                            class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span
+                                            class="product-name-style ">Beige</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span
+                                            class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
-                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
-                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span
+                                            class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span
+                                            class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span
+                                            class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -141,14 +170,20 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Red Man</span></div>
-                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span
+                                            class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span
+                                            class="product-name-style ">Red Man</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span
+                                            class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
-                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
-                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span
+                                            class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span
+                                            class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span
+                                            class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -160,14 +195,20 @@
 
                             <div class="product-description-wrap">
                                 <div class="product-description-name">
-                                    <div class="product-series orange product-series-padding"><span class="product-series-style ">GLOOP SERIES</span></div>
-                                    <div class="product-name dark1 product-series-padding"><span class="product-name-style ">Green</span></div>
-                                    <div class="product-number dark3 product-series-padding"><span class="product-number-style ">#12983</span></div>
+                                    <div class="product-series orange product-series-padding"><span
+                                            class="product-series-style ">GLOOP SERIES</span></div>
+                                    <div class="product-name dark1 product-series-padding"><span
+                                            class="product-name-style ">Green</span></div>
+                                    <div class="product-number dark3 product-series-padding"><span
+                                            class="product-number-style ">#12983</span></div>
                                 </div>
                                 <div class="product-description-cost">
-                                    <div class="product-bid dark3 product-series-padding"><span class="prduct-bid-style ">TOP BID</span></div>
-                                    <div class="product-cost dark1 product-series-padding"><span class="product-cost-style ">2.99 ETH</span></div>
-                                    <div class="product-timer dark3 product-series-padding"><span class="product-timer-style ">1 day left</span></div>
+                                    <div class="product-bid dark3 product-series-padding"><span
+                                            class="prduct-bid-style ">TOP BID</span></div>
+                                    <div class="product-cost dark1 product-series-padding"><span
+                                            class="product-cost-style ">2.99 ETH</span></div>
+                                    <div class="product-timer dark3 product-series-padding"><span
+                                            class="product-timer-style ">1 day left</span></div>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +225,8 @@
                         <h1 class="page-title-style-h1">An NFT like no other</h1>
                     </div>
                     <div class="page-text dark2">
-                        <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to receive updates when we go
+                        <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
+                            receive updates when we go
                             live.</p>
                     </div>
                     <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
@@ -202,10 +244,14 @@
                     <div class="footer-description dark2"><span>Exclusive NFT Collection</span></div>
                     <div class="footer-social-media dark4">
                         <ul>
-                            <li class="social-icon"><img src="./images/footer-social-icons/social-facebook.svg" alt=""></li>
-                            <li class="social-icon"><img src="./images/footer-social-icons/social-twitter.svg" alt=""></li>
-                            <li class="social-icon"><img src="./images/footer-social-icons/social-instagram.svg" alt=""></li>
-                            <li class="social-icon"><img src="./images/footer-social-icons/social-tiktok.svg" alt=""></li>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-facebook.svg" alt="">
+                            </li>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-twitter.svg" alt="">
+                            </li>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-instagram.svg" alt="">
+                            </li>
+                            <li class="social-icon"><img src="./images/footer-social-icons/social-tiktok.svg" alt="">
+                            </li>
                         </ul>
                     </div>
                 </div>
