footer changes + misc fixes

--- a/index.html
+++ b/index.html
@@ -257,49 +257,49 @@
                 </div>
                 <div class="footer-list">
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title dark2"><span>ABOUT</span></div>
+                        <div class="footer-list-title dark2"><span class="footer-list-title-style">ABOUT</span></div>
                         <div class="footer-list-items">
                             <ul>
-                                <li class="footer-list-item"><a href="#">About</a></li>
-                                <li class="footer-list-item"><a href="#">Terms</a></li>
-                                <li class="footer-list-item"><a href="#">Legal</a></li>
+                                <li class="footer-list-item"><a class="footer-list-item-style dark2" href="#">About</a></li>
+                                <li class="footer-list-item"><a class="footer-list-item-style dark2" href="#">Terms</a></li>
+                                <li class="footer-list-item"><a class="footer-list-item-style dark2" href="#">Legal</a></li>
                             </ul>
                         </div>
                     </div>
 
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title dark2"><span>NFT</span></div>
+                        <div class="footer-list-title dark2"><span class="footer-list-title-style dark2">NFT</span></div>
                         <div class="footer-list-items">
                             <ul>
-                                <li class="footer-list-item dark2"><a href="#">OpenSea</a></li>
-                                <li class="footer-list-item dark2"><a href="#">Maker</a></li>
-                                <li class="footer-list-item dark2"><a href="#">Learn</a></li>
+                                <li class="footer-list-item dark2"><a class="footer-list-item-style dark2" href="#">OpenSea</a></li>
+                                <li class="footer-list-item dark2"><a class="footer-list-item-style dark2" href="#">Maker</a></li>
+                                <li class="footer-list-item dark2"><a class="footer-list-item-style dark2" href="#">Learn</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title dark2"><span>CONTACT</span></div>
+                        <div class="footer-list-title dark2"><span class="footer-list-title-style">CONTACT</span></div>
                         <div class="footer-list-items">
                             <ul>
-                                <li class="footer-list-item dark2"><a href="#">Press</a></li>
-                                <li class="footer-list-item dark2"><a href="#">Support</a></li>
+                                <li class="footer-list-item dark2"><a class="footer-list-item-style dark2" href="#">Press</a></li>
+                                <li class="footer-list-item dark2"><a class="footer-list-item-style dark2" href="#">Support</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="footer-list-wrap">
-                        <div class="footer-list-title dark2"><span>SOCIAL</span></div>
+                        <div class="footer-list-title dark2"><span class="footer-list-title-style">SOCIAL</span></div>
                         <div class="footer-list-items">
                             <ul>
-                                <li class="footer-list-item dark2"><a href="#">Twitter</a></li>
-                                <li class="footer-list-item dark2"><a href="#">Instagram</a></li>
+                                <li class="footer-list-item "><a class="footer-list-item-style dark2" href="#">Twitter</a></li>
+                                <li class="footer-list-item dark2"><a class="footer-list-item-style dark2" href="#">Instagram</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
 
                 <div class="footer-legal">
-                    <div class="footer-copyright dark4"><span>© Copyright 2022 NFTlanding</span></div>
-                    <div class="footer-copyright dark4"><span>Launching August 2022</span></div>
+                    <div class="footer-copyright dark4"><span class="footer-copyright-style">© Copyright 2022 NFTlanding</span></div>
+                    <div class="footer-copyright dark4 hide-mobile-part"><span>Launching August 2022</span></div>
                 </div>
             </div>
         </div>
