background-images-font

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <section class="hero-page ">
             <div class="container background-image-1">
-                <div class="hero-page-wrapper ">
+                <div class="hero-page-wrapper">
                     <div class="hero-content">
                         <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
                         <div class="page-title dark1">
@@ -43,7 +43,9 @@
                         </div>
                         <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
                     </div>
-                    <div class="hero-image"></div>
+                    <div class="hero-image">
+                        <div class="hero-image-content"><img src="./images/background-pictures/hero-test.png" alt=""></div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -67,18 +69,18 @@
                         <li class="partner">
                             <div class="partner-logo dark4"><img class="partner-logo-style"
                                     src="./images/main-partner-list-icons/vector-boomerang.svg" alt=""></div>
-                            <div class="partner-name dark4"><span class="partner-name-style">Boom<span
+                            <div class="partner-name dark4"><span class="partner-name-style partner-name-small">Boom<span
                                         class="hide-mobile-part">erang</span></span></div>
                         </li>
                         <li class="partner">
                             <div class="partner-logo dark4"><img class="partner-logo-style"
                                     src="./images/main-partner-list-icons/vector-blimp.svg" alt=""></div>
-                            <div class="partner-name dark4"><span class="partner-name-style">Blimp</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style partner-name-big">Blimp</span></div>
                         </li>
                         <li class="partner">
                             <div class="partner-logo dark4"><img class="partner-logo-style"
                                     src="./images/main-partner-list-icons/vector-qrco.svg" alt=""></div>
-                            <div class="partner-name dark4"><span class="partner-name-style">qrco</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style partner-name-big">qrco</span></div>
                         </li>
                         <li class="partner hide-mobile-part">
                             <div class="partner-logo dark4"><img class="partner-logo-style"
@@ -88,7 +90,7 @@
                         <li class="partner">
                             <div class="partner-logo dark4"><img class="partner-logo-style"
                                     src="./images/main-partner-list-icons/vector-droplet.svg" alt=""></div>
-                            <div class="partner-name dark4"><span class="partner-name-style">Droplet</span></div>
+                            <div class="partner-name dark4"><span class="partner-name-style partner-name-small">Droplet</span></div>
                         </li>
                     </ul>
                 </div>
