--- a/index.html
+++ b/index.html
@@ -221,18 +221,24 @@
 
         <section class="hero-page">
             <div class="container">
-                <div class="hero-page-wrapper background-image-2">
-                    <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
-                    <div class="page-title dark1">
-                        <h1 class="page-title-style-h1">An NFT like no other</h1>
+                <div class="hero-page-wrapper">
+                    <div class="left-site">
+                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
+                        <div class="page-title dark1">
+                            <h1 class="page-title-style-h1">An NFT like no other</h1>
+                        </div>
+                        <div class="page-text dark2">
+                            <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
+                                receive updates when we go
+                                live.</p>
+                        </div>
+                        <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
                     </div>
-                    <div class="page-text dark2">
-                        <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
-                            receive updates when we go
-                            live.</p>
+                    <div class="right-side">
+                        <img src="./images/background-pictures/bottom-hero-image.svg" alt="">
                     </div>
-                    <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
                 </div>
+
             </div>
         </section>
 
