--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <section class="hero-page ">
+        <!-- <section class="hero-page ">
             <div class="container background-image-1">
                 <div class="hero-page-wrapper">
                     <div class="hero-content">
@@ -47,6 +47,28 @@
                         <div class="hero-image-content"><img src="./images/background-pictures/hero-test.png" alt=""></div>
                     </div>
                 </div>
+            </div>
+        </section> -->
+        <section class="hero-page-top">
+            <div class="container">
+                <div class="hero-page-wrapper">
+                    <div class="left-side">
+                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
+                        <div class="page-title dark1">
+                            <h1 class="page-title-style-h1">An NFT like no other</h1>
+                        </div>
+                        <div class="page-text dark2">
+                            <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
+                                receive updates when we go
+                                live.</p>
+                        </div>
+                        <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
+                    </div>
+                    <div class="right-side monster-top">
+                        <img class= "monster-img" src="./images/background-pictures/hero-test.png" alt="">
+                    </div>
+                </div>
+
             </div>
         </section>
 
@@ -222,7 +244,7 @@
         <section class="hero-page">
             <div class="container">
                 <div class="hero-page-wrapper">
-                    <div class="left-site">
+                    <div class="left-side">
                         <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
                         <div class="page-title dark1">
                             <h1 class="page-title-style-h1">An NFT like no other</h1>
