padding-fixes from mobile to desk

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <div class="navigation-logo"><img src="./images/logo-pictures/header-logo.svg" alt=""></div>
                 <div class="navigation-list">
                     <ul>
-                        <li class="navigation-item dark2"><a href="#">Features</a></li>
-                        <li class="navigation-item dark2"><a href="#">About</a></li>
-                        <li class="navigation-item dark2"><a href="#">Launch</a></li>
-                        <li class="navigation-signup pink"><a class="header-button" href="#">Sign Up</a></li>
+                        <li class="navigation-item "><a class="dark2" href="#">Features</a></li>
+                        <li class="navigation-item"><a class="dark2" href="#">About</a></li>
+                        <li class="navigation-item"><a class="dark2" href="#">Launch</a></li>
+                        <li class="navigation-signup"><a class="pink" href="#">Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="navigation-burger"><img src="./images/logo-pictures/burger.svg" alt=""></div>
@@ -51,7 +51,7 @@
         </section> -->
         <section class="hero-page-top">
             <div class="container">
-                <div class="hero-page-wrapper">
+                <div class="hero-page-wrapper top">
                     <div class="left-side">
                         <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
                         <div class="page-title dark1">
@@ -241,7 +241,7 @@
             </div>
         </section>
 
-        <section class="hero-page">
+        <!-- <section class="hero-page">
             <div class="container">
                 <div class="hero-page-wrapper">
                     <div class="left-side">
@@ -258,6 +258,29 @@
                     </div>
                     <div class="right-side">
                         <img src="./images/background-pictures/bottom-hero-image.svg" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section> -->
+
+        <section class="hero-page-top">
+            <div class="container">
+                <div class="hero-page-wrapper top">
+                    <div class="left-side">
+                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
+                        <div class="page-title dark1">
+                            <h1 class="page-title-style-h1">An NFT like no other</h1>
+                        </div>
+                        <div class="page-text dark2">
+                            <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
+                                receive updates when we go
+                                live.</p>
+                        </div>
+                        <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
+                    </div>
+                    <div class="right-side monster-top">
+                        <img class= "monster-img" src="./images/background-pictures/hero-test.png" alt="">
                     </div>
                 </div>
 
@@ -326,12 +349,12 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="footer-legal">
-                    <div class="footer-copyright dark4"><span class="footer-copyright-style">© Copyright 2022 NFTlanding</span></div>
-                    <div class="footer-copyright dark4 hide-mobile-part"><span>Launching August 2022</span></div>
-                </div>
             </div>
+        </div>
+        
+        <div class="footer-legal">
+            <div class="footer-copyright dark4"><span class="footer-copyright-style">© Copyright 2022 NFTlanding</span></div>
+            <div class="footer-copyright dark4 hide-mobile-part"><span>Launching August 2022</span></div>
         </div>
     </footer>
 </body>
