--- a/index.html
+++ b/index.html
@@ -28,27 +28,6 @@
     </header>
 
     <main>
-        <!-- <section class="hero-page ">
-            <div class="container background-image-1">
-                <div class="hero-page-wrapper">
-                    <div class="hero-content">
-                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
-                        <div class="page-title dark1">
-                            <h1 class="page-title-style-h1">An NFT like no other</h1>
-                        </div>
-                        <div class="page-text dark2">
-                            <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
-                                receive updates when we go
-                                live.</p>
-                        </div>
-                        <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
-                    </div>
-                    <div class="hero-image">
-                        <div class="hero-image-content"><img src="./images/background-pictures/hero-test.png" alt=""></div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
         <section class="hero-page-top">
             <div class="container">
                 <div class="hero-page-wrapper top">
@@ -241,29 +220,6 @@
             </div>
         </section>
 
-        <!-- <section class="hero-page">
-            <div class="container">
-                <div class="hero-page-wrapper">
-                    <div class="left-side">
-                        <div class="launch-date pink"><span class="launch-date-style">LAUNCHING SOON</span></div>
-                        <div class="page-title dark1">
-                            <h1 class="page-title-style-h1">An NFT like no other</h1>
-                        </div>
-                        <div class="page-text dark2">
-                            <p class="page-text-style">Don’t miss out on the release of our new NFT. Sign up below to
-                                receive updates when we go
-                                live.</p>
-                        </div>
-                        <div class="main-button"><a class="main-button-style" href="#">Sign Up</a></div>
-                    </div>
-                    <div class="right-side">
-                        <img src="./images/background-pictures/bottom-hero-image.svg" alt="">
-                    </div>
-                </div>
-
-            </div>
-        </section> -->
-
         <section class="hero-page-top">
             <div class="container">
                 <div class="hero-page-wrapper top">
@@ -294,7 +250,7 @@
             <div class="container">
                 <div class="footer-title">
                     <div class="navigation-logo"><img src="./images/logo-pictures/header-logo.svg" alt=""></div>
-                    <div class="footer-description dark2"><span>Exclusive NFT Collection</span></div>
+                    <div class="footer-description"><span>Exclusive NFT Collection</span></div>
                     <div class="footer-social-media dark4">
                         <ul>
                             <li class="social-icon"><img src="./images/footer-social-icons/social-facebook.svg" alt="">
